// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getComponentCss() > should return correct css for isDisabled: false 1`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
  --p-internal-multi-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 6px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: false 2`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
  --p-internal-multi-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 6px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
}"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 1`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
  --p-internal-multi-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 6px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  opacity: 0.4;
}
@media (forced-colors: active) {
  [role="presentation"] {
    opacity: 1;
    color: GrayText;
  }
}
"
`;

exports[`getComponentCss() > should return correct css for isDisabled: true 2`] = `
":host([hidden]) {
  display: none !important;
}
::slotted(*) {
  --p-internal-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
  --p-internal-multi-select-option-padding-left: calc(44.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 12px);
}
[role="group"] {
  display: flex;
  flex-direction: column;
  gap: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
}
[role="presentation"] {
  padding-block: calc(11.2px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 4px);
  padding-inline: calc(16.8px * (var(--p-internal-optgroup-scaling) - 0.64285714) + 6px);
  font: normal normal 600 clamp(0.81rem, 0.23vw + 0.77rem, 0.88rem)/calc(6px + 2.125ex) 'Porsche Next','Arial Narrow',Arial,'Heiti SC',SimHei,sans-serif;
  color: var(--p-color-primary);
  opacity: 0.4;
}
@media (forced-colors: active) {
  [role="presentation"] {
    opacity: 1;
    color: GrayText;
  }
}
"
`;
